# Temporal-Insight

./: README.md  README_EN.md  main.py  pyproject.toml
data/: sample_time_series.csv
src/temporal_insight/: __init__.py
src/temporal_insight/data/: __init__.py  processor.py
src/temporal_insight/models/: __init__.py  base.py  engine.py  predictors.py
src/temporal_insight/utils/: __init__.py  helpers.py
src/temporal_insight/visualization/: __init__.py  charts.py
tests/: test_data_processor.py  test_models.py
